# loom-canvas

./: .gitignore  AGENTS.md  BOOTSTRAP.md  CLAUDE.md  README.md  setup.py
.claude/skills/loom/: SKILL.md  methodology.md
server/: pyproject.toml  run.py  run_mcp.py
server/loom/: __init__.py  agent.py  cli.py  mcp_server.py  models.py  server.py  state.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: AddCard.tsx  App.tsx  Canvas.tsx  CardComposer.tsx  ContentRenderer.tsx  HistoryPanel.tsx  Home.tsx  Inspector.tsx  ProjectSwitcher.tsx  ResearchReader.tsx  api.ts  roles.ts  store.ts  styles.css
web/src/nodes/: LoomNode.tsx
