[project]
name = "loom-server"
version = "0.1.0"
description = "Loom canvas server + MCP bridge — a visual workbench for Claude Code / Codex driven multi-agent research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "mcp>=1.2.0",
    "pydantic>=2.7.0",
]

[project.scripts]
loom-server = "loom.cli:serve"
loom-mcp = "loom.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loom"]
